--- a/catalog.html
+++ b/catalog.html
@@ -80,13 +80,15 @@
     </section>
 
     <section class="manufacture">
-      <div class="manufacture__header">
-        <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
-      </div>
-      <img class="manufacture__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-      <div class="manufacture__caption">
-        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+      <div class="manufacture__wrapper">
+        <div class="manufacture__header">
+          <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
+        </div>
+        <img class="manufacture__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
+        <div class="manufacture__caption">
+          <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+          <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+        </div>
       </div>
     </section>
 
