--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,12 @@
       </div>
       <div class="catalog__wrapper">
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик"></a>
+          <a class="catalog-item__image" href="#">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+              <img src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Зайчик">
+            </picture></a>
           <div class="catalog-item__wrapper">
             <div class="catalog-item__info">
               <a href="#"><h1 class="catalog-item__title" >Зайчик-попрыгайчик</h1></a>
@@ -56,7 +61,12 @@
           </div>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка"></a>
+          <a class="catalog-item__image" href="#">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+              <img src="img/photo-2-mobile@1x.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Корзинка">
+            </picture></a>
           <div class="catalog-item__wrapper">
             <div class="catalog-item__info">
               <a href="#"><h1 class="catalog-item__title">Корзинка для белья</h1></a>
@@ -69,7 +79,12 @@
           </div>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка"></a>
+          <a class="catalog-item__image" href="#">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+              <img src="img/photo-3-mobile@1x.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Большая корзинка">
+            </picture></a>
           <div class="catalog-item__wrapper">
             <div class="catalog-item__info">
               <a href="#"><h1 class="catalog-item__title">Большая корзинка для&nbsp;игрушек</h1></a>
@@ -89,7 +104,13 @@
         <div class="manufacture__header">
           <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
         </div>
-        <img class="manufacture__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
+        <div class="manufacture__video">
+          <picture>
+              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
+            </picture>
+        </div>
         <div class="manufacture__caption">
           <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
           <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
