--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
           <li class="main-nav__item  main-nav__item--tablet  main-nav__item--color"><span class="main-nav__free">Бесплатная доставка по России</span></li>
         </ul>
       </nav>
-      <div class="back-color"></div>
+      <div class="page-header__back-color"></div>
     </header>
 
     <section class="order">
