--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
           <li class="main-nav__item  main-nav__item--tablet  main-nav__item--color"><span class="main-nav__free">Бесплатная доставка по России</span></li>
         </ul>
       </nav>
-      <div class="back-color"></div>
+      <div class="page-header__back-color"></div>
     </header>
 
     <section class="catalog">
@@ -56,7 +56,7 @@
             </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">1200 руб.</span>
-              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+              <a class="catalog-item__basket  modal-btn" href="modal.html">Добавить в корзину</a>
             </div>
           </div>
         </article>
@@ -74,7 +74,7 @@
             </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">690 руб.</span>
-              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+              <a class="catalog-item__basket  modal-btn" href="modal.html">Добавить в корзину</a>
             </div>
           </div>
         </article>
@@ -92,7 +92,7 @@
             </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">1500 руб.</span>
-              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+              <a class="catalog-item__basket  modal-btn" href="modal.html">Добавить в корзину</a>
             </div>
           </div>
         </article>
