--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="category__item  category__item--interior">
           <a class="category__link  category__link--interior" href="#">
             <h3>Предметы интерьера</h3>
-            <svg class="category-icon-interior" width="41" height="63">
+            <svg class="category__icon-interior" width="41" height="63">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-interior"/>
             </svg>
           </a>
@@ -198,7 +198,7 @@
         <div class="category__item  category__item--toys">
           <a class="category__link  category__link--toys" href="#">
             <h3>Детские игрушки</h3>
-            <svg class="category-icon-toys" width="60" height="60">
+            <svg class="category__icon-toys" width="60" height="60">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-toys"/>
             </svg>
           </a>
