--- a/index.html
+++ b/index.html
@@ -162,21 +162,35 @@
                 </svg>
               </a>
             </li>
-            <li class="main-nav__item  main-nav__item--catalog"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-            <li class="main-nav__item  main-nav__item--form"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
-            <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link" href="#">
-              <svg class="main-nav__item-icon  main-nav__item-icon--search" width="18" height="18">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/>
-              </svg>
-              Поиск по сайту</a></li>
-            <li class="main-nav__item  main-nav__item--basket"><a class="main-nav__link" href="#">
-              <svg class="main-nav__item-icon  main-nav__item-icon--basket" width="21" height="19">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"/>
-              </svg>
-              Корзина: пока пуста</a></li>
-            <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link  main-nav__link-new" href="#">Новые поступления</a></li>
-            <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link  main-nav__link-sale" href="#">Распродажа</a></li>
-            <li class="main-nav__item  main-nav__item--tablet"><span class="main-nav__free">Бесплатная доставка по России</span></li>
+            <li class="main-nav__item  main-nav__item--catalog">
+              <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--form">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--search">
+              <a class="main-nav__link" href="#">
+                <svg class="main-nav__item-icon  main-nav__item-icon--search" width="18" height="18">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"/>
+                </svg>Поиск по сайту
+              </a>
+            </li>
+            <li class="main-nav__item  main-nav__item--basket">
+              <a class="main-nav__link" href="#">
+                <svg class="main-nav__item-icon  main-nav__item-icon--basket" width="21" height="19">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"/>
+                </svg>Корзина: пока пуста
+              </a>
+            </li>
+            <li class="main-nav__item  main-nav__item--desktop">
+              <a class="main-nav__link  main-nav__link-new" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--desktop">
+              <a class="main-nav__link  main-nav__link-sale" href="#">Распродажа</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--tablet">
+              <span class="main-nav__free">Бесплатная доставка по России</span>
+            </li>
           </ul>
         </nav>
       </div>
