--- a/catalog.html
+++ b/catalog.html
@@ -215,7 +215,7 @@
               <span>Рост 30 см, вес 200 г</span>
             </div>
             <div class="catalog-item__buy">
-              <span class="catalog-item__price">1200 руб.</span>
+              <span class="catalog-item__price">1 200 руб.</span>
               <a class="catalog-item__basket  modal-btn" href="modal.html">Добавить в корзину
                 <svg class="catalog-item__icon-basket" width="21" height="19">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"/>
@@ -261,7 +261,7 @@
               <span>Диаметр 30 см, высота 30 см</span>
             </div>
             <div class="catalog-item__buy">
-              <span class="catalog-item__price">1500 руб.</span>
+              <span class="catalog-item__price">1 500 руб.</span>
               <a class="catalog-item__basket  modal-btn" href="modal.html">Добавить в корзину
                 <svg class="catalog-item__icon-basket" width="21" height="19">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-basket"/>
@@ -275,19 +275,21 @@
 
     <section class="manufacture">
       <div class="manufacture__wrapper">
-        <div class="manufacture__header">
-          <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
-        </div>
-        <div class="manufacture__video">
-          <picture>
-              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-              <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
-            </picture>
-        </div>
-        <div class="manufacture__caption">
-          <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-          <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+        <div class="manufacture__wrapper-hover">
+          <div class="manufacture__header">
+            <h2 class="manufacture__title">Процесс производства</h2>
+          </div>
+          <div class="manufacture__video">
+            <picture>
+                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+                <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Процесс производства">
+              </picture>
+          </div>
+          <div class="manufacture__caption">
+            <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+          </div>
         </div>
       </div>
     </section>
@@ -343,7 +345,7 @@
               <label class="modal__radio-label" for="size-l">L</label>
             </div>
           </fieldset>
-          <input class="modal__submit" type="submit" name="submit" value="Добавить">
+          <input class="modal__btn" type="submit" name="submit" value="Добавить">
         </form>
     </section>
 
