--- a/index.html
+++ b/index.html
@@ -349,11 +349,7 @@
         </div>
       </div>
       <div class="contacts__map">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
-          <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Карта">
-        </picture>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1680.735151015203!2d30.32184139327696!3d59.936419864753475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1482350352888" width="100%" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="contacts__btn-wrapper">
         <a class="contacts__btn  btn" href="#">Напишите нам</a>
