--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       document.createElement( "picture" );
     </script>
     <script src="js/picturefill.js" async></script>
-
   </head>
 
   <body>
@@ -330,7 +329,7 @@
             </div>
           </div>
         </div>
-        <a class="reviews__btn  btn" href="#">Написать</a>
+        <a class="reviews__btn  btn" href="review.html">Написать</a>
       </div>
     </section>
 
@@ -352,7 +351,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1680.735151015203!2d30.32184139327696!3d59.936419864753475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1482350352888" width="100%" height="457" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="contacts__btn-wrapper">
-        <a class="contacts__btn  btn" href="#">Напишите нам</a>
+        <a class="contacts__btn  btn" href="feedback.html">Напишите нам</a>
       </div>
     </section>
 
