--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       // Picture element HTML5 shiv
       document.createElement( "picture" );
     </script>
-    <script src="js/picturefill.js" async></script>
+    <script src="js/picturefill.min.js" async></script>
   </head>
 
   <body>
@@ -208,7 +208,7 @@
         <h1 class="category__title">Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
       </div>
       <div class="category__wrapper">
-        <div class="category__item  category__item--interior">
+        <div class="category__item">
           <a class="category__link  category__link--interior" href="#">
             <h3>Предметы интерьера</h3>
             <svg class="category__icon-interior" width="41" height="63">
@@ -216,7 +216,7 @@
             </svg>
           </a>
         </div>
-        <div class="category__item  category__item--toys">
+        <div class="category__item">
           <a class="category__link  category__link--toys" href="#">
             <h3>Детские игрушки</h3>
             <svg class="category__icon-toys" width="60" height="60">
@@ -349,7 +349,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo-block">
-          <a class="page-footer__logo" href="index.html">
+          <a class="page-footer__logo">
             <svg class="page-footer__icon-logo" width="102" height="35">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-footer"/>
             </svg>
@@ -403,8 +403,7 @@
 
     <div class="overlay"></div>
 
-    <script src="js/menu.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
