--- a/index.html
+++ b/index.html
@@ -338,14 +338,13 @@
           </div>
         </div>
       </div>
-      <div class="contacts__map">
-        <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1680.735151015203!2d30.32184139327696!3d59.936419864753475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1482350352888" height="457" style="border:0" allowfullscreen></iframe>
+      <div class="contacts__map" id="map">
       </div>
       <div class="contacts__btn-wrapper">
         <a class="contacts__btn  btn" href="feedback.html">Напишите нам</a>
       </div>
     </section>
-
+    
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo-block">
@@ -404,6 +403,8 @@
     <div class="overlay"></div>
 
     <script src="js/script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvX8nsGdFNcK4ybTiUACjhRdjuEzZ9eAA&signed_in=true&callback=initMap">
+    </script>
 
   </body>
 </html>
