--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <script>
       // Picture element HTML5 shiv
       document.createElement( "picture" );
@@ -344,7 +344,7 @@
         <a class="contacts__btn  btn" href="feedback.html">Напишите нам</a>
       </div>
     </section>
-    
+
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo-block">
