--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                 </svg>
               </a>
             </li>
-            <li class="main-nav__item  main-nav__item--catalog">
+            <li class="main-nav__item  main-nav__item--catalog  main-nav__item--tablet-incolor">
               <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="main-nav__item  main-nav__item--form">
+            <li class="main-nav__item  main-nav__item--form  main-nav__item--tablet-incolor">
               <a class="main-nav__link" href="form.html">Вязание на заказ</a>
             </li>
             <li class="main-nav__item  main-nav__item--search">
@@ -189,13 +189,13 @@
                 </svg>Корзина: пока пуста
               </a>
             </li>
-            <li class="main-nav__item  main-nav__item--desktop">
+            <li class="main-nav__item  main-nav__item--desktop  main-nav__item--desktop-incolor">
               <a class="main-nav__link  main-nav__link-new" href="#">Новые поступления</a>
             </li>
-            <li class="main-nav__item  main-nav__item--desktop">
+            <li class="main-nav__item  main-nav__item--desktop  main-nav__item--desktop-incolor">
               <a class="main-nav__link  main-nav__link-sale" href="#">Распродажа</a>
             </li>
-            <li class="main-nav__item  main-nav__item--tablet">
+            <li class="main-nav__item  main-nav__item--tablet  main-nav__item--incolor">
               <span class="main-nav__free">Бесплатная доставка по России</span>
             </li>
           </ul>
