--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="reviews__wrapper  slider">
         <h2 class="reviews__title">Отзывы</h2>
         <div class="reviews__list">
-          <blockquote class="reviews__item  slider__item">
+          <blockquote class="reviews__item">
             <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
           </blockquote>
           <div class="reviews__list-slider">
